--- a/frontend/whatToEatFrontend/src/app/recipe.details/recipe.details.component.css
+++ b/frontend/whatToEatFrontend/src/app/recipe.details/recipe.details.component.css
@@ -1,10 +1,10 @@
-.photo {
+/* .photo {
     height: 600px;
-    width: 50%;
+    width: 100%;
     object-fit: cover;
     border-radius: 30px;
-    float: right;
-  }
+    float: center;
+  } */
   
   .heading {
     font-size: 48pt;
@@ -12,15 +12,11 @@
     margin-bottom: 15px;
   }
   
-  /* .dueation::before {
-     content: url('/assets/location-pin.svg') / ''; 
-  } */
-  
   .container {
     display: flex;
     align-items: center;
     margin: auto;
-    width: 50%;
+    width: 70%;
     padding: 10px;
   }
   .duration {
@@ -59,3 +55,53 @@
       height: 400px;
     }
   }
+
+  table, th , td {
+    border: 1px solid grey;
+    border-collapse: collapse;
+    padding: 5px;
+  }
+
+  table thead th {
+    background-color:antiquewhite;
+  }
+  
+  table tbody tr:nth-child(odd) {
+    background-color: #f1f1f1;
+  }
+  
+  table tbody tr:nth-child(even) {
+    background-color: #ffffff;
+  }
+
+  div {
+    display: inline-block;
+}
+
+#main {
+  width: 100%;
+  float: center
+}
+
+#infoDiv {
+  float:left; 
+  width: 50%;
+  margin-left: 30px;
+  margin-top: 30px 
+}
+
+#photoDiv {
+  float: right;
+  margin-right: 30px;
+  margin-top: 30px
+
+}
+
+#reviewsDiv {
+  float: center;
+  width: 90%;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 30px;
+  /* border-style: dashed */
+}
