--- a/frontend/whatToEatFrontend/src/app/user-profile/user-profile.component.css
+++ b/frontend/whatToEatFrontend/src/app/user-profile/user-profile.component.css
@@ -10,10 +10,15 @@
     margin-top: 30px
 }
 
-#avatar {
-    float: right;
-    margin-right: 30px;
+#mealPlans {
+    float: left;
+    /* margin-right: 30px; */
     margin-top: 30px
+}
+#shoppingLists {
+  float: left;
+  /* margin-right: 30px; */
+  margin-top: 30px
 }
 
  .profile-img-card {
