--- a/frontend/whatToEatFrontend/src/app/recipe.details/recipe.details.component.css
+++ b/frontend/whatToEatFrontend/src/app/recipe.details/recipe.details.component.css
@@ -105,3 +105,11 @@
   margin-top: 30px;
   /* border-style: dashed */
 }
+
+.photoDiv {
+  width: 50%;
+}
+.photo {
+  width: 70%;
+  height: 100%;
+}
