add more functionality

--- a/frontend/whatToEatFrontend/src/app/about/about.component.html
+++ b/frontend/whatToEatFrontend/src/app/about/about.component.html
@@ -1,6 +1,7 @@
 <section class="about">
     <div>
       <h1 class="title">About Us</h1>
+      <img src="../../assets/images/meal-prep.png"/>
       <p>At "What to Eat," we're here to simplify your mealtime decisions. With an extensive range of recipes, cooking tips, and food articles, we make choosing your next dish a breeze.
         Our platform is designed for all food lovers - whether you're a seasoned chef or a kitchen newbie. Discover a diverse collection of recipes that cater to various tastes, dietary needs, and cooking skill levels.
         </p>
