--- a/frontend/whatToEatFrontend/src/app/about/about.component.css
+++ b/frontend/whatToEatFrontend/src/app/about/about.component.css
@@ -3,11 +3,16 @@
     max-width: 800px;
     margin: 0 auto;
     width: 100%;
-    text-align: left;
+    text-align: justify;
   }
 
 .title {
     margin: 40px 0 20px;
     font-size: 30;
     font-weight: 500;
+}
+
+img {
+  width: 100%;
+  margin: 15px;
 }
