--- a/frontend/whatToEatFrontend/src/app/create-recipe/create-recipe.component.css
+++ b/frontend/whatToEatFrontend/src/app/create-recipe/create-recipe.component.css
@@ -5,6 +5,7 @@ label {
   
   .card-container.card {
     max-width: 400px !important;
+    width: 100%;
     padding: 40px 40px;
   }
   
@@ -32,8 +33,8 @@ label {
   }
 
 
-.mat-form-field {
-    width: 50%;
+mat-form-field {
+    width: 100%;
     float: center;
 }
 h2{
@@ -41,7 +42,8 @@ h2{
     color: darkgreen;
 }
 .mat-card{
-    width: 50%;
+  text-align: center;
+    width: 100%;
 }
 a{
     color: #fff !important;
@@ -50,4 +52,12 @@ a{
 
 #unit {
   width: 70px
+}
+.main-div{
+  /* height: 100vh; */
+  
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
