--- a/frontend/whatToEatFrontend/src/app/create-recipe/create-recipe.component.html
+++ b/frontend/whatToEatFrontend/src/app/create-recipe/create-recipe.component.html
@@ -1,3 +1,4 @@
+<div class="main-div">
 <mat-card>
     <mat-card-title>
         <h2>Create Recipe</h2>
@@ -72,3 +73,4 @@
         <a mat-raised-button color="primary" *ngIf="success" [routerLink] = "['/recipes', recipeId]">Success! Go to new recipe!</a>
     </mat-card-content>
 </mat-card>
+</div>
