--- a/frontend/whatToEatFrontend/src/app/login/login.component.html
+++ b/frontend/whatToEatFrontend/src/app/login/login.component.html
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="form-group">
-          <button class="btn btn-primary btn-block">
+          <button mat-button class="btn btn-primary btn-block">
             Login
           </button>
         </div>
@@ -68,8 +68,10 @@
         </div>
       </form>
   
+      <a routerLink = ></a>
       <div class="alert alert-success" *ngIf="isLoggedIn">
         Logged in as {{ role }}.
       </div>
+      <a mat-button routerLink="/register"> Register </a>
     </div>
   </div>
