--- a/frontend/whatToEatFrontend/src/app/meal-plans/meal-plans.component.html
+++ b/frontend/whatToEatFrontend/src/app/meal-plans/meal-plans.component.html
@@ -1,1 +1,22 @@
-<p>meal-plans works!</p>
+<mat-progress-spinner *ngIf="mealPlans.length === 0"></mat-progress-spinner>
+    <div class="content">
+        <div fxLayout="row wrap" fxLayoutGap="10px">
+            <div fxFlex="25%" *ngFor="let mealPlan of mealPlans">
+                <mat-card class="mat-elevation-z4">
+                    <mat-card-header>
+                        <mat-card-title>{{mealPlan.date |date:'dd/MM/yyyy'}}</mat-card-title>
+                        <mat-card-subtitle>Recipes</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div *ngFor="let recipeId of mealPlan.recipes; index as i">
+                            <a [routerLink] = "['/recipes', recipeId]">Recipe {{i+1}}</a>
+                        </div>
+                    </mat-card-content>
+                    <mat-card-actions>
+                  <button mat-button [routerLink]="['/myMealPlans', mealPlan._id]">See more</button>
+                </mat-card-actions>
+                </mat-card>
+            </div>
+        </div>
+    </div>
+    <router-outlet></router-outlet>
