--- a/frontend/whatToEatFrontend/src/app/shopping-lists/shopping-lists.component.html
+++ b/frontend/whatToEatFrontend/src/app/shopping-lists/shopping-lists.component.html
@@ -1,1 +1,23 @@
-<p>shopping-lists works!</p>
+<mat-progress-spinner *ngIf="shoppingLists.length === 0"></mat-progress-spinner>
+    <div class="content">
+        <div fxLayout="row wrap" fxLayoutGap="10px">
+            <div fxFlex="25%" *ngFor="let shoppingList of shoppingLists">
+                <mat-card class="mat-elevation-z4">
+                    <mat-card-header>
+                        <mat-card-title *ngIf="!shoppingList.completed">{{shoppingList.startDate |date:'dd/MM/yyyy'}} - {{shoppingList.endDate |date:'dd/MM/yyyy'}}</mat-card-title>
+                        <mat-card-title id="completed" *ngIf="shoppingList.completed"><s>{{shoppingList.startDate |date:'dd/MM/yyyy'}} - {{shoppingList.endDate |date:'dd/MM/yyyy'}}</s></mat-card-title>
+                        <mat-card-subtitle>Meal plans</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <div *ngFor="let mealPlanId of shoppingList.mealPlans; index as i">
+                            <a [routerLink] = "['/myMealPlans', mealPlanId]">Meal Plan {{i+1}}</a>
+                        </div>
+                    </mat-card-content>
+                    <mat-card-actions>
+                  <button mat-button [routerLink]="['/myShoppingLists', shoppingList._id]">See more</button>
+                </mat-card-actions>
+                </mat-card>
+            </div>
+        </div>
+    </div>
+    <router-outlet></router-outlet>
